添加登录页login.html和成绩页score.html

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,38 +3,33 @@
 <head>
 <meta charset="UTF-8">
 <title>查询成绩</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport"
+	content="width=1000, initial-scale=1.0, maximum-scale=1.0">
 
 <!-- Loading Bootstrap -->
 <link href="css/vendor/bootstrap.min.css" rel="stylesheet">
 
 <!-- Loading Flat UI Pro -->
 <link href="css/flat-ui.min.css" rel="stylesheet">
+<link href="css/demo.css" rel="stylesheet">
 
 <style>
 body {
 	background-color: #2FC2A5;
 	/* background-color: #1ABC9C; */
 }
-
-.container {
-	margin-top: 32px;
-}
 </style>
 </head>
 <body>
 	<div class="container">
-		<div class="row">
-			<div class="col-md-7">
-				<div class="tile" id="score">
-					<h3 class="tile-title">2017-2018 #2</h3>
+		<div class="login">
+			<div class="login-screen">
+				<div class="login-icon">
+					<h4>
+						Welcome to <small>Mail App</small>
+					</h4>
 				</div>
-			</div>
 
-			<div class="col-md-1">
-				<div id="vertical-slider" style="height: 500px;"></div>
-			</div>
-			<div class="col-md-4">
 				<div class="login-form">
 					<div class="form-group ">
 						<input type="text" class="form-control" value="" placeholder="学号"
@@ -61,10 +56,10 @@ body {
 		crossorigin="anonymous"></script>
 
 	<!-- Bootstrap 4 requires Popper.js -->
-	<!-- 	<script src="https://unpkg.com/popper.js@1.14.1/dist/umd/popper.min.js"
-		crossorigin="anonymous"></script> -->
+	<!--    <script src="https://unpkg.com/popper.js@1.14.1/dist/umd/popper.min.js"
+        crossorigin="anonymous"></script> -->
 
-	<!-- 	<script src="http://vjs.zencdn.net/6.6.3/video.js"></script> -->
+	<!--    <script src="http://vjs.zencdn.net/6.6.3/video.js"></script> -->
 
 	<script src="/js/flat-ui.min.js"></script>
 	<script src="/js/application.js"></script>
