--- a/src/main/resources/templates/score.html
+++ b/src/main/resources/templates/score.html
@@ -24,7 +24,7 @@ body {
 </head>
 <body>
 	<div class="container">
-		<div class="row">
+		<div class="row"><div class="col-md-2"></div>
 			<div class="col-md-7">
 				<div class="tile" id="score">
 					<h3 class="tile-title">2017-2018 #2</h3>
@@ -33,24 +33,6 @@ body {
 
 			<div class="col-md-1">
 				<div id="vertical-slider" style="height: 500px;"></div>
-			</div>
-			<div class="col-md-4">
-				<div class="login-form">
-					<div class="form-group ">
-						<input type="text" class="form-control" value="" placeholder="学号"
-							id="xh" name="xh" required> <span
-							class="form-control-feedback fui-user"></span>
-					</div>
-
-					<div class="form-group ">
-						<input type="password" class="form-control" value=""
-							placeholder="密码" id="mm" name="mm" required> <span
-							class="form-control-feedback fui-lock"></span>
-					</div>
-
-					<button class="btn btn-primary btn-large btn-block"
-						onclick="doLogin();">登录</button>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -69,29 +51,5 @@ body {
 	<script src="/js/flat-ui.min.js"></script>
 	<script src="/js/application.js"></script>
 
-
-	<script>
-		function doLogin() {
-			$
-					.post(
-							"/doLogin",
-							{
-								"xh" : $('#xh').val(),
-								"mm" : $('#mm').val()
-							},
-							function(data) {
-								console.log(data);
-								console.log(data.length);
-								$('#score').empty();
-
-								var html = "<h3 class='tile-title'>2017-2018 #2</h3>";
-								for (var i = 0; i < data.length; i++) {
-									html += ("<p>" + data[i].name + " "
-											+ data[i].score + "</p>");
-								}
-								$('#score').append(html);
-							})
-		}
-	</script>
 </body>
 </html>
